# PI-bot

Desktop/chatbot_stram/: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  steps.txt
Desktop/chatbot_stram/templates/: chat.html
