[project]
name = "chatbot-stram"
version = "0.1.0"
description = "Chatbot app with HTML frontend, Redis cache, and streaming TTS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.3",
    "flask>=3.1.0",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=6.4.0",
]
